[tool.poetry]
name = "secwall"
version = "2.0.0"
description = "Port of the original security proxy sec-wall to python3."
authors = [
"Alan Shea Anderson-Priddy <aand@pdx.edu>",
"Dariusz Suchojad <dsuch@gefira.pl>"
]
license = "LGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
gevent = "^20.9.0"
lxml = "^4.6.2"
fresco = "^2.0.4"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.790"
pyclean = "^2.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
